--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
     "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^5.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.31.0",
